@@ -1,9 +1,11 @@
-(defproject wacnet "2.1.5-ALPHA"
+(defproject wacnet "2.1.5-RC2"
   :description "Webserver to browse a BACnet network"
   :url "https://hvac.io"
   :license {:name "GNU General Public License V3"
             :url "http://www.gnu.org/licenses/gpl-3.0.html"}
-  :dependencies [[org.clojure/clojure "1.8.0"]
+  ;; WARNING
+  ;; compiling with java 9 causes the webserver to hang when started on java 8
+  :dependencies [[org.clojure/clojure "1.9.0"]
 
                  ;; BACnet
                  [bacure "1.0.8"]
@@ -11,10 +13,10 @@
                  [io.hvac.vigilia/vigilia-logger "1.0.12"]
 
                  ;; webserver stuff
-                 [bidi "2.0.16"] ; routing
-                 [aleph "0.4.3"] ; server
-                 [aleph-middleware "0.1.1"]
-                 [yada "1.2.2" :exclusions [manifold]]
+                 [bidi "2.1.3"] ; routing
+                 [aleph "0.4.5-alpha3"] ; server
+                 [aleph-middleware "0.2.0"]
+                 [yada "1.2.11" :exclusions [manifold]]
                  
                  [trptcolin/versioneer "0.2.0"]
 
@@ -23,30 +25,32 @@
                  
 
                  ;; nREPL
-                 [org.clojure/tools.nrepl "0.2.12"]
-                 [cider/cider-nrepl "0.15.1"]
+                 [org.clojure/tools.nrepl "0.2.13"]
+                 [cider/cider-nrepl "0.16.0"]
 
                  ;; cljs
-                 [org.clojure/clojurescript "1.9.946"]
-                 [org.clojure/core.async "0.3.443"]
-                 
-                 [reagent "0.8.0-alpha2"]
+                 [org.clojure/clojurescript "1.10.238"]
+                 [org.clojure/core.async "0.4.474"]
+                 [org.clojure/tools.reader "1.2.2"]
 
+                 [reagent "0.8.0-alpha2"] ;; doesn't work with clojure 1.9 on java 9
+                 
                  [org.clojars.frozenlock/reagent-modals "0.2.8"]
-                 [cljs-ajax "0.7.1"]
+                 [cljs-ajax "0.7.3"]
                  [re-com "2.1.0" :exclusions [reagent]]
-                 [com.andrewmcveigh/cljs-time "0.5.0"]
+                 [com.andrewmcveigh/cljs-time "0.5.2"]
                  [cljsjs/fixed-data-table-2 "0.7.17-2"
                   :exclusions [cljsjs/react]]]
 
-  :plugins [[lein-environ "1.0.1"]
+  :plugins [[lein-environ "1.1.0"]
+            [lein-ancient "0.6.15"]
             [lein-cljsbuild "1.1.7"]
-            [lein-externs "0.1.5"]]
+            [org.clojars.rasom/lein-externs "0.1.7"]]
 
   :manifest {"SplashScreen-Image" "public/img/splash.png"}
 
   :min-lein-version "2.5.0"
-
+  
   :main wacnet.server
 
   :clean-targets ^{:protect false} [:target-path
@@ -54,41 +58,62 @@
                                     [:cljsbuild :builds :app :compiler :output-to]]
 
 
-  :cljsbuild {:builds {:app {:source-paths ["src/cljs" "src/cljc"]
-                             :compiler {:output-to "target/cljsbuild/public/js/app.js"
-                                        :output-dir "target/cljsbuild/public/js/out"
-                                        :asset-path   "js/out"
-                                        :optimizations :none
-                                        :pretty-print  true}}}}
+  ;; jvm options for java 9 compatibility - try to remove once a new version of cljs is released
+  ;;:jvm-opts ["--add-modules" "java.xml.bind"]
+  ;; :jvm-opts ~(concat
+  ;;                                       ; Java 9+ recognition, adding --add-modules. Java versions before 9
+  ;;                                       ; had a different version syntax where they contained '.' delimiters,
+  ;;                                       ; from Java 9 onwards it has a simple versioning scheme based on one
+  ;;                                       ; number.
+  ;;             (if (false? (.contains (System/getProperty "java.version") "."))
+  ;;               ["--add-modules" "java.xml.bind"]
+  ;;               []))
+
+  :cljsbuild
+  {:builds {:min
+            {:source-paths ["src/cljs" "src/cljc" "env/prod/cljs"]
+             :compiler
+             {:output-to        "target/cljsbuild/public/js/app.js"
+              :output-dir       "target/cljsbuild/public/js"
+              :source-map       "target/cljsbuild/public/js/app.js.map"
+              :optimizations :advanced
+              :pretty-print  false
+              :externs ["externs.js"]}}
+            :app
+            {:source-paths ["src/cljs" "src/cljc" "env/dev/cljs"]
+             :figwheel {:on-jsload "wacnet.core/init!"}
+             :compiler
+             {:main "wacnet.dev"
+              :asset-path "/js/out"
+              :output-to "target/cljsbuild/public/js/app.js"
+              :output-dir "target/cljsbuild/public/js/out"
+              :source-map true
+              :optimizations :none
+              :pretty-print  true}}}}
 
   :resource-paths ["resources" "target/cljsbuild"]
 
   :profiles {:dev {;:repl-options {:init-ns wacnet.repl}
 
-                   :dependencies [[ring/ring-mock "0.3.0"]
-                                  [ring/ring-devel "1.4.0"]
-                                  [prone "0.8.3"]
-                                  [figwheel-sidecar "0.5.13"]
+                   :dependencies [[ring/ring-mock "0.3.2"]
+                                  [ring/ring-devel "1.6.3"]
+                                  [figwheel-sidecar "0.5.15"]
                                   [org.clojure/tools.nrepl "0.2.13"]
-                                  [com.cemerick/piggieback "0.2.2"]
-                                  ;; [pjstadig/humane-test-output "0.7.1"]
-                                  ]
+                                  [com.cemerick/piggieback "0.2.2"]]
 
                    :source-paths ["env/dev/clj"]
-                   :plugins [[lein-figwheel "0.5.13"]
-                             [cider/cider-nrepl "0.15.1"]
-                             [refactor-nrepl "2.3.1"]]
+                   :plugins [[lein-figwheel "0.5.15"]
+                             [cider/cider-nrepl "0.16.0"]]
 
                    :injections [(require 'pjstadig.humane-test-output)
                                 (pjstadig.humane-test-output/activate!)]
 
                    :figwheel {:http-server-root "public"
+                              :readline false
                               :server-port 3449
                               :nrepl-port 7002
                               :nrepl-middleware ["cemerick.piggieback/wrap-cljs-repl"
-                                                 "cider.nrepl/cider-middleware"
-                                                 "refactor-nrepl.middleware/wrap-refactor"
-                                                 ]
+                                                 "cider.nrepl/cider-middleware"]
                               :css-dirs ["resources/public/css"]
                               :ring-handler wacnet.handler/app}
 
@@ -99,17 +124,9 @@
                                                          :source-map true}}}}}
 
              :uberjar {:source-paths ["env/prod/clj"]
-                       :prep-tasks ["compile" ["cljsbuild" "once"]]
+                       :prep-tasks ["compile" ["cljsbuild" "once" "min"]]
                        :env {:production true}
                        :aot :all
-                       :omit-source true
-                       :cljsbuild {:jar true
-                                   :builds {:app
-                                            {:source-paths ["env/prod/cljs"]
-                                             :compiler
-                                             {:optimizations :advanced
-                                              :externs ^:replace ["externs.js"]
-                                              :pretty-print false}
-                                             }}}}}
+                       :omit-source true}}
   
   :source-paths ["src/clj" "src/cljs" "src/cljc"])
